samples/_failures_safe/1761786911_4a26e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ec262d9.c: In function ‘main’:
./samples/SAFE/__tmp_7ec262d9.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("Invalid starting node\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7ec262d9.c:163:9: error: expected declaration or statement at end of input
